~500 word write up

--- a/lab/gss.ipynb
+++ b/lab/gss.ipynb
@@ -30,6 +30,25 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Collaborated with Keeley Messick and Taylor Decina"
+      ],
+      "metadata": {
+        "id": "FY5IAOd5-6pD"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Given that the General Social Survey (GSS) is an accumulation of data on Americans, there were numerous opportunities for the analysis to investigate the different correlations amongst aspects of a person. We chose to explore the set of variables (1) Age (age), (2) Respondent’s highest degree (degree), (3) Family income (realinc), (4) Respondent’s employment status (wrkstat), (5) How often a respondent attended a religious service (attend), (6) Respondent’s marital status (marital), (7) Respondents told they have depression (depress), (8) Respondent’s general happiness (happy). These were picked because we were curious about how age, education, income, employment status, religion, and marital status can play a role in emotional outcomes such as depression or happiness. Finding the relationships amongst these variables is useful because it can help us target vulnerable populations and implement more successful interventions to lower rates of depression, while also sustaining systems to keep people happy.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "PCHS8SXc6_6b"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
@@ -62,11 +81,11 @@
         "        phase = 1 # Switch from write mode to append mode"
       ],
       "metadata": {
-        "id": "MnFUn-w7Q8FT",
-        "outputId": "1953a389-a728-4807-9534-54726baea6ae",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "MnFUn-w7Q8FT",
+        "outputId": "1953a389-a728-4807-9534-54726baea6ae"
       },
       "execution_count": 6,
       "outputs": [
@@ -186,13 +205,13 @@
         "print(df_clean.head())\n"
       ],
       "metadata": {
-        "id": "cwLclSVIU4M3",
-        "outputId": "6c59fba1-90ad-465e-b912-469518c05e3c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "cwLclSVIU4M3",
+        "outputId": "76b0fdff-80f6-4abe-862d-651e37d92aa6"
       },
-      "execution_count": 85,
+      "execution_count": 88,
       "outputs": [
         {
           "output_type": "stream",
@@ -227,45 +246,45 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-85-783ded0c32f7>:9: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+            "<ipython-input-88-783ded0c32f7>:9: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
             "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
             "\n",
             "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
             "\n",
             "\n",
             "  df['relig'].fillna('Unknown', inplace=True)\n",
-            "<ipython-input-85-783ded0c32f7>:10: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+            "<ipython-input-88-783ded0c32f7>:10: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
             "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
             "\n",
             "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
             "\n",
             "\n",
             "  df['attend'].fillna('Unknown', inplace=True)\n",
-            "<ipython-input-85-783ded0c32f7>:13: SettingWithCopyWarning: \n",
+            "<ipython-input-88-783ded0c32f7>:13: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
             "  df_clean['degree'] = df_clean['degree'].replace({\n",
-            "<ipython-input-85-783ded0c32f7>:17: SettingWithCopyWarning: \n",
+            "<ipython-input-88-783ded0c32f7>:17: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
             "  df_clean['happy'] = df_clean['happy'].replace({\n",
-            "<ipython-input-85-783ded0c32f7>:21: SettingWithCopyWarning: \n",
+            "<ipython-input-88-783ded0c32f7>:21: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
             "  df_clean['attend'] = df_clean['attend'].replace({\n",
-            "<ipython-input-85-783ded0c32f7>:26: SettingWithCopyWarning: \n",
+            "<ipython-input-88-783ded0c32f7>:26: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
             "  df_clean['depress'] = df_clean['depress'].replace({\n",
-            "<ipython-input-85-783ded0c32f7>:30: SettingWithCopyWarning: \n",
+            "<ipython-input-88-783ded0c32f7>:30: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
@@ -292,12 +311,12 @@
         "# == most respondents are in high school and below and are generally pretty happy"
       ],
       "metadata": {
-        "id": "Ux90RbdVbvO4",
-        "outputId": "e55790b5-623e-49ed-f9a9-c5bb093b6830",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 725
-        }
+        },
+        "id": "Ux90RbdVbvO4",
+        "outputId": "e55790b5-623e-49ed-f9a9-c5bb093b6830"
       },
       "execution_count": 86,
       "outputs": [
@@ -363,12 +382,12 @@
         "# == the highest percentage of not too happys are those less than once a year or never"
       ],
       "metadata": {
-        "id": "0BytYd0Ub9PH",
-        "outputId": "0da5a30f-3231-44b9-995f-43e5b711136d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 929
-        }
+        },
+        "id": "0BytYd0Ub9PH",
+        "outputId": "0da5a30f-3231-44b9-995f-43e5b711136d"
       },
       "execution_count": 87,
       "outputs": [
@@ -419,12 +438,12 @@
         "# == age does not seem to affect happiness levels"
       ],
       "metadata": {
-        "id": "VCWIIkacdFSO",
-        "outputId": "9a5b2827-e5ba-46ae-a276-12affe79540f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 758
-        }
+        },
+        "id": "VCWIIkacdFSO",
+        "outputId": "9a5b2827-e5ba-46ae-a276-12affe79540f"
       },
       "execution_count": 55,
       "outputs": [
@@ -523,12 +542,12 @@
         "df_clean.groupby('happy')['realinc'].mean()\n"
       ],
       "metadata": {
-        "id": "SlPxMIDGdIR2",
-        "outputId": "b7427d5c-6127-441e-fc7b-98dde9a47954",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 737
-        }
+        },
+        "id": "SlPxMIDGdIR2",
+        "outputId": "b7427d5c-6127-441e-fc7b-98dde9a47954"
       },
       "execution_count": 54,
       "outputs": [
@@ -643,12 +662,12 @@
         "#  but incomes is slightly stronger\n"
       ],
       "metadata": {
-        "id": "CSpGuDUgeqM4",
-        "outputId": "64273f75-17fa-436b-bfd9-321687f54ab9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 468
-        }
+        },
+        "id": "CSpGuDUgeqM4",
+        "outputId": "64273f75-17fa-436b-bfd9-321687f54ab9"
       },
       "execution_count": 73,
       "outputs": [
@@ -684,12 +703,12 @@
         "# separated or divorced does not necessarily mean less happiness compared to never married\n"
       ],
       "metadata": {
-        "id": "tOfwWiIRe2A-",
-        "outputId": "3df9cd1d-58e8-4e69-d24d-29b381d02cc5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 427
-        }
+        },
+        "id": "tOfwWiIRe2A-",
+        "outputId": "3df9cd1d-58e8-4e69-d24d-29b381d02cc5"
       },
       "execution_count": 40,
       "outputs": [
@@ -713,6 +732,34 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Using counts of the data, we see that the highest percentage of respondents are in high school or below and are generally happy. Through the data visualization using surveys from the GSS, we compared multiple factors in the respondent's lives that may increase or decrease their happiness. Marital status (being married) and religious attendance (attending church more often) both had small positive correlations with increased happiness. Using the stacked bar chart of marital status vs. happiness we can see that married respondents had the highest percentage of \"very happy\" answers, compared to the other marital statuses. Separated, divorced, and never married respondents all have similar percentages of respondants who are \"not too happy\", showing that being married may increase your happiness, but a failed marriage does not necessarily mean you are less happy than those who are not married.\n",
+        "Looking at religious attendance, the highest percentage of very happys are those who go at least once a week or more and the highest percentage of not too happys are those less than once a year or never. From this data we can infer that attending church can increase happiness. There were no significant results from education level, but those with at least a bachelor's degree seemed to have a slightly lower percentage of \"not too happy\" responses. Age did not have any significant different in happiness across the three happiness groups."
+      ],
+      "metadata": {
+        "id": "nFO0bQki5y_7"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The most interesting variables in this EDA were income and religious attendance, which had the greatest correlation (0.17 and 0.14, respectively) to happiness of the respondent. I think that the saying \"money can't buy happiness\" is somewhat false because greater income and comfortable financial standing will improve the quality of life for any respondant. I was surprised by the affect of religious attendance on the happiness of the respondants. Personally, I do not go to church and I have friends in varying ranges of religious affilitation. I think that we are all on similar levels of happiness, regardless of our religious attendance, so the data in the survey surprised me. I was also interested to see that age did not have any impact of happiness. Obviously, life changes and becomes different as we get older, but I think this shows that we adapt to appreciate the different stages of our life."
+      ],
+      "metadata": {
+        "id": "-I0t0Fvu9cCm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "8652W25g-urh"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
