Edited data cleaning

--- a/lab/gss.ipynb
+++ b/lab/gss.ipynb
@@ -176,9 +176,8 @@
         "print(df.isnull().sum())\n",
         "\n",
         "# Drop rows with too many missing values\n",
-        "df_clean = df.dropna(subset=['happy'])\n",
-        "df['relig'].fillna('Unknown', inplace=True)\n",
-        "df['attend'].fillna('Unknown', inplace=True)\n",
+        "df_clean = df.dropna(subset=['happy']).copy()\n",
+        "df_clean['attend'].fillna('Unknown', inplace=True)\n",
         "\n",
         "# Convert categorical variables to meaningful labels\n",
         "df_clean['degree'] = df_clean['degree'].replace({\n",
@@ -198,9 +197,6 @@
         "    1: 'Yes', 2: 'No'\n",
         "})\n",
         "\n",
-        "df_clean['relig'] = df_clean['relig'].replace({\n",
-        "    1: 'Protestant', 2: 'Catholic', 3: 'Jewish', 4: 'None', 5: 'Other'\n",
-        "})\n",
         "\n",
         "print(df_clean.head())\n"
       ],
@@ -209,9 +205,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cwLclSVIU4M3",
-        "outputId": "76b0fdff-80f6-4abe-862d-651e37d92aa6"
+        "outputId": "621c201a-f8a0-4c2f-a36e-f696f430571f"
       },
-      "execution_count": 88,
+      "execution_count": 95,
       "outputs": [
         {
           "output_type": "stream",
@@ -246,50 +242,13 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-88-783ded0c32f7>:9: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+            "<ipython-input-95-55a44c59cf6b>:9: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
             "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
             "\n",
             "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
             "\n",
             "\n",
-            "  df['relig'].fillna('Unknown', inplace=True)\n",
-            "<ipython-input-88-783ded0c32f7>:10: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-            "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-            "\n",
-            "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-            "\n",
-            "\n",
-            "  df['attend'].fillna('Unknown', inplace=True)\n",
-            "<ipython-input-88-783ded0c32f7>:13: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  df_clean['degree'] = df_clean['degree'].replace({\n",
-            "<ipython-input-88-783ded0c32f7>:17: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  df_clean['happy'] = df_clean['happy'].replace({\n",
-            "<ipython-input-88-783ded0c32f7>:21: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  df_clean['attend'] = df_clean['attend'].replace({\n",
-            "<ipython-input-88-783ded0c32f7>:26: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  df_clean['depress'] = df_clean['depress'].replace({\n",
-            "<ipython-input-88-783ded0c32f7>:30: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  df_clean['relig'] = df_clean['relig'].replace({\n"
+            "  df_clean['attend'].fillna('Unknown', inplace=True)\n"
           ]
         }
       ]
